creando como-funcionamos.html + como funcionamos.css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </label>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">¿Quienes somos?</a></li>
+                <li><a href="somos.html">¿Quienes somos?</a></li>
                 <li><a href="#">Necesito un Servicio</a></li>
                 <li><a href="#">Quiero ofrecer un Servicio</a></li>
                 <li><a href="#">Contacto</a></li>
