--- a/somos.html
+++ b/somos.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/variables.css">
+    <link rel="stylesheet" href="styles/global.css">
+    <link rel="stylesheet" href="styles/somos.css">
     <title>Manos Amigas. Quienes somos</title>
 </head>
 <body>
     <header>
         <img src="/Img/C72A1953-5643-4AD5-B68B-E8BB0D2B4E80.png" alt="logo">
-        <nav>Somos - Contact0</nav>
+        <nav>Somos - Como funcionamos - Contacto</nav>
     </header>
     <main>
         <section id="somos-section">
@@ -22,6 +28,16 @@
                 Si desea formar parte de nuestra red solidaria o necesita nuestros servicios, no dude en ponerse en contacto con nosotros. Estamos aquí para brindar apoyo, encontrar soluciones y crear un impacto positivo en la vida de las personas vulnerables. 
                 </p>
                 <h2>¡Juntos podemos marcar la diferencia!</h2>
+            <div id="somos-imgs">
+            <img src="Img/somos1.png" alt="">
+            <img src="Img/somos2.png" alt="">
+            <img src="Img/somos3.png" alt="">
+            <img src="Img/somos4.png" alt="">
+            <img src="Img/somos5.png" alt="">
+            <img src="Img/somos6.png" alt="">
+            <img src="Img/somos7.png" alt="">
+            <img src="Img/somos8.png" alt="">
+            </div>
         </section>
     </main>
 </body>
