--- a/ofrece-tus-servicios.html
+++ b/ofrece-tus-servicios.html
@@ -1,52 +1,10 @@
-<!--<!DOCTYPE html>
-<html>
-<head>
-    <title>Ofrece tus servicios</title>
-    <link rel="stylesheet" href="">
-</head>
-<body>
-    <h1>Ofrece tus servicios</h1>
-    <form id="serviceForm">
-        <label for="name">Nombre:</label>
-        <input type="text" id="name" required>
 
-        <label for="lastName">Apellido:</label>
-        <input type="text" id="lastName" required>
-
-        <label for="phone">Teléfono:</label>
-        <input type="tel" id="phone" required>
-
-        <label for="email">Email:</label>
-        <input type="email" id="email" required>
-
-        <label for="province">Provincia:</label>
-        <input type="text" id="province" required>
-
-        <label for="jobType">Tipo de trabajos que ofrece:</label>
-        <select id="jobType" required>
-            <option value="acompanamiento">Acompañamiento</option>
-            <option value="manitas">Manitas</option>
-            <option value="cuidados">Cuidados</option>
-            <option value="legal">Legal y Papeleo</option>
-            <option value="limpieza">Limpieza de hogar</option>
-            <option value="montaje">Montar muebles</option>
-        </select>
-
-        <label for="description">Descripción del trabajo (máximo 200 palabras):</label>
-        <textarea id="description" rows="4" maxlength="200" required></textarea>
-
-        <button type="submit">Enviar</button>
-    </form>
-    <div id="notification" class="hidden">
-        Revisamos tu anuncio y nos pondremos en contacto contigo.
-    </div>
-
-    <script src="ofrece-tus-servicios.js"></script>
-</body>
-</html>-->
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <title>Ofrece tus servicios</title>
     <link rel="stylesheet" href="ofrece-tus-servicios.css">
 </head>
