--- a/somos.html
+++ b/somos.html
@@ -19,6 +19,7 @@
     <main>
         <section id="somos-section">
             <h1>Quienes somos</h1>
+            <div class="box">
             <p>¡Gracias por visitar nuestra página web! Somos una organización sin ánimo de lucro dedicada a marcar la diferencia en la vida de las personas vulnerables. Nuestro principal objetivo es proporcionar servicios para el hogar a aquellos que más lo necesitan, creando un puente entre personas vulnerables y empresas especializadas en brindar estos servicios.<br>
 
                 Trabajamos incansablemente para asegurarnos de que las personas vulnerables tengan acceso a los servicios esenciales para el mantenimiento de sus hogares. Nos enorgullece facilitar la conexión entre aquellos que requieren ayuda y las empresas comprometidas que ofrecen servicios de calidad. Además, como organización, nos esforzamos por obtener subvenciones y ayudas para ayudar a cubrir los costos de estos servicios, aliviando así la carga económica para las personas vulnerables.<br>
@@ -28,17 +29,19 @@
                 Si desea formar parte de nuestra red solidaria o necesita nuestros servicios, no dude en ponerse en contacto con nosotros. Estamos aquí para brindar apoyo, encontrar soluciones y crear un impacto positivo en la vida de las personas vulnerables. 
                 </p>
                 <h2>¡Juntos podemos marcar la diferencia!</h2>
+            </div>
             <div id="somos-imgs">
-            <img src="Img/somos1.png" alt="">
-            <img src="Img/somos2.png" alt="">
-            <img src="Img/somos3.png" alt="">
-            <img src="Img/somos4.png" alt="">
-            <img src="Img/somos5.png" alt="">
-            <img src="Img/somos6.png" alt="">
-            <img src="Img/somos7.png" alt="">
-            <img src="Img/somos8.png" alt="">
+                <img src="Img/somos1.png" alt="">
+                <img src="Img/somos2.png" alt="">
+                <img src="Img/somos3.png" alt="">
+                <img src="Img/somos4.png" alt="">
+                <img src="Img/somos5.png" alt="">
+                <img src="Img/somos6.png" alt="">
+                <img src="Img/somos7.png" alt="">
+                <img src="Img/somos8.png" alt="">
             </div>
         </section>
     </main>
+    <footer>Manos amigas copyright</footer>
 </body>
 </html>
