--- a/pages/ofrece-tus-servicios.html
+++ b/pages/ofrece-tus-servicios.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <title>Ofrece tus servicios</title>
-    <link rel="stylesheet" href="ofrece-tus-servicios.css">
+    <link rel="stylesheet" href="./styles/ofrece-tus-servicios.css">
 </head>
 <body>
     <h1>Ofrece tus servicios</h1>
@@ -45,7 +45,7 @@
         Revisamos tu anuncio y nos pondremos en contacto contigo.
     </div>
 
-    <script src="ofrece-tus-servicios.js"></script>
+    <script src="./script/ofrece-tus-servicios.js"></script>
 </body>
 </html>
 
