--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="./styles/index.css">
     <title>Manos Amigas</title>
 
 </head>
@@ -98,9 +98,7 @@
             <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
         </div>
 </footer>
-    <script src="formulario.js"></script>
-    <script src="custom.js"></script>
-    <script src="script.js"></script>
+    <script src="./script/banner-search.js"></script>
 </body>
 
 </html>
