--- a/somos.html
+++ b/somos.html
@@ -8,13 +8,29 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/variables.css">
     <link rel="stylesheet" href="styles/global.css">
+    <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/somos.css">
     <title>Manos Amigas. Quienes somos</title>
 </head>
 <body>
     <header>
-        <img src="/Img/C72A1953-5643-4AD5-B68B-E8BB0D2B4E80.png" alt="logo">
-        <nav>Somos - Como funcionamos - Contacto</nav>
+        <nav>
+            <a href="#" class="enlace">
+                <img src="./Img/C72A1953-5643-4AD5-B68B-E8BB0D2B4E80.png" alt="" class="logo">
+            </a>
+            <label for="check" class="checkbtn">
+                <img class="hamburguesa" src="./Img/barra-de-menus.png" >
+            </label>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">¿Quienes somos?</a></li>
+                <li><a href="#">Necesito un Servicio</a></li>
+                <li><a href="#">Quiero ofrecer un Servicio</a></li>
+                <li><a href="#">Contacto</a></li>
+                <li><a href="#">Preguntas Frecuentes</a></li>
+                <li><input class="search" type="text" placeholder="busca un producto.."> </li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section id="somos-section">
@@ -40,6 +56,10 @@
                 <img src="Img/somos/somos7.png" alt="">
                 <img src="Img/somos/somos8.png" alt="">
             </div>
+        </section>
+        <section id="newsletter">
+            <h3>Registrate en nuestra newsletter.</h3>
+            <form> <input type="text"><button type="submit"></button> </form>
         </section>
     </main>
     <footer>Manos amigas copyright</footer>
