--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="../styles/index.css">
     <title>Manos Amigas</title>
 
 </head>
@@ -17,11 +17,11 @@
     <header>
         <nav>
             <a href="#" class="enlace">
-                <img src="./Img/C72A1953-5643-4AD5-B68B-E8BB0D2B4E80.png" alt="" class="logo">
+                <img src="../Img/C72A1953-5643-4AD5-B68B-E8BB0D2B4E80.png" alt="" class="logo">
             </a>
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
-                <img class="hamburguesa" src="./Img/barra-de-menus.png" >
+                <img class="hamburguesa" src="../Img/barra-de-menus.png" >
             </label>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -40,9 +40,9 @@
       </div>
     <div class="carousel-container">
         <div class="carousel">
-          <img src="./Img/imagen1.png" alt="Imagen 1">
-          <img src="./Img/imagen1.png" alt="Imagen 2">
-          <img src="./Img/imagen1.png" alt="Imagen 3">
+          <img src="../Img/imagen1.png" alt="Imagen 1">
+          <img src="../Img/imagen1.png" alt="Imagen 2">
+          <img src="../Img/imagen1.png" alt="Imagen 3">
         </div>
       </div>
 
