--- a/pages/somos.html
+++ b/pages/somos.html
@@ -6,38 +6,30 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/variables.css">
-    <link rel="stylesheet" href="./styles/global.css">
-    <link rel="stylesheet" href="./styles/header.css">
-    <link rel="stylesheet" href="./styles/somos.css">
-    <link rel="stylesheet" href="./styles/footer.css">
+    <link rel="stylesheet" href="../styles/variables.css">
+    <link rel="stylesheet" href="../styles/global.css">
+    <link rel="stylesheet" href="../styles/header.css">
+    <link rel="stylesheet" href="../styles/somos.css">
+    <link rel="stylesheet" href="../styles/footer.css">
     <title>Manos Amigas. Quienes somos</title>
 </head>
 <body>
     <header>
         <nav>
             <a href="#" class="enlace">
-                <img src="./Img/C72A1953-5643-4AD5-B68B-E8BB0D2B4E80.png" alt="" class="logo">
+                <img src="../Img/C72A1953-5643-4AD5-B68B-E8BB0D2B4E80.png" alt="" class="logo">
             </a>
             <label for="check" class="checkbtn">
-                <img class="hamburguesa" src="./Img/barra-de-menus.png" >
+                <img class="hamburguesa" src="../Img/barra-de-menus.png" >
             </label>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">¿Quienes somos?</a></li>
-                <li><a href="#">Necesito un Servicio</a></li>
-                <li><a href="#">Quiero ofrecer un Servicio</a></li>
-                <li><a href="#">Contacto</a></li>
-                <li><a href="#">Preguntas Frecuentes</a></li>
-                <li><input class="search" type="text" placeholder="busca un producto.."> </li>
-            </ul>
         </nav>
     </header>
     <main>
-        <section id="somos-section">
-            <h1>Quienes somos</h1>
+        <section id="somos-section">  
             <div class="box">
-            <p>¡Gracias por visitar nuestra página web! Somos una organización sin ánimo de lucro dedicada a marcar la diferencia en la vida de las personas vulnerables. Nuestro principal objetivo es proporcionar servicios para el hogar a aquellos que más lo necesitan, creando un puente entre personas vulnerables y empresas especializadas en brindar estos servicios.<br>
+                <h1>Quienes somos</h1>
+            
+                <p>¡Gracias por visitar nuestra página web! Somos una organización sin ánimo de lucro dedicada a marcar la diferencia en la vida de las personas vulnerables. Nuestro principal objetivo es proporcionar servicios para el hogar a aquellos que más lo necesitan, creando un puente entre personas vulnerables y empresas especializadas en brindar estos servicios.<br>
 
                 Trabajamos incansablemente para asegurarnos de que las personas vulnerables tengan acceso a los servicios esenciales para el mantenimiento de sus hogares. Nos enorgullece facilitar la conexión entre aquellos que requieren ayuda y las empresas comprometidas que ofrecen servicios de calidad. Además, como organización, nos esforzamos por obtener subvenciones y ayudas para ayudar a cubrir los costos de estos servicios, aliviando así la carga económica para las personas vulnerables.<br>
                 
@@ -47,22 +39,30 @@
                 </p>
                 <h2>¡Juntos podemos marcar la diferencia!</h2>
             </div>
-            <div id="somos-imgs">
-                <img src="Img/somos/somos1.png" alt="">
-                <img src="Img/somos/somos2.png" alt="">
-                <img src="Img/somos/somos3.png" alt="">
-                <img src="Img/somos/somos4.png" alt="">
-                <img src="Img/somos/somos5.png" alt="">
-                <img src="Img/somos/somos6.png" alt="">
-                <img src="Img/somos/somos7.png" alt="">
-                <img src="Img/somos/somos8.png" alt="">
+        </section>
+        <div id="somos-imgs">
+            <img src="../Img/somos/somos1.png" alt="">
+            <img src="../Img/somos/somos2.png" alt="">
+            <img src="../Img/somos/somos3.png" alt="">
+            <img src="../Img/somos/somos4.png" alt="">
+            <img src="../Img/somos/somos5.png" alt="">
+            <img src="../Img/somos/somos6.png" alt="">
+            <img src="../Img/somos/somos7.png" alt="">
+            <img src="../Img/somos/somos8.png" alt="">
+        </div>
+    </main>
+    <footer>        
+        <section id="newsletter">
+            <div>
+                <img src="../Img/somos/icon_news.svg">
+                <h3>Registrate en nuestra newsletter.</h3>
+                <form> 
+                    <input type="text">
+                    <button type="submit"></button>
+                </form>
             </div>
         </section>
-        <section id="newsletter">
-            <h3>Registrate en nuestra newsletter.</h3>
-            <form> <input type="text"><button type="submit"></button> </form>
-        </section>
-    </main>
-    <footer>Manos amigas copyright</footer>
+        <p>Manos amigas copyright</p>
+    </footer>
 </body>
 </html>
