--- a/pages/como-funcionamos.html
+++ b/pages/como-funcionamos.html
@@ -8,7 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     
   <title>Cómo Funcionamos - Plataforma de Ayuda y Servicios Domésticos Gratuitos</title>
-  <link rel="stylesheet" href="como-funcionamos.css">
+  <link rel="stylesheet" href="../styles/global.css">
+  <link rel="stylesheet" href="../styles/variables.css">
+  <link rel="stylesheet" href="../styles/como-funcionamos.css">
 </head>
 <body>
 
@@ -69,9 +71,6 @@
 
   </main>
 
-  <footer>
-    <p>© 2023 Cómo Funcionamos - Plataforma de Ayuda y Servicios Domésticos Gratuitos</p>
-  </footer>
-  <script src="ofrece-tus-servicios.js"></script>
+  
 </body>
 </html>
