--- a/contactanos.html
+++ b/contactanos.html
@@ -5,7 +5,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <title>Contactanos</title>
-    <link rel="stylesheet" href="contactanos.css">
+    <link rel="stylesheet" href="./contactanos.css">
+   
 </head>
 <body>
     <div class="container">
@@ -27,6 +28,5 @@
         </form>
     </div>
 
-    <script src="contactanos.js"></script>
 </body>
 </html>
