--- a/services.html
+++ b/services.html
@@ -54,6 +54,7 @@
                 <div class="notifications">
                   <h2>Notificaciones</h2>
                   <ul id="notifications-list"></ul>
+                  <div class="notification-message" style="display: none;"></div>
                 </div>
               </div>
                 <button class="card_services_button_contact">Ponte en contacto</button>
