--- a/pages/index.html
+++ b/pages/index.html
@@ -10,7 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/variables.css">
     <link rel="stylesheet" href="../styles/global.css">
-    <link rel="stylesheet" href="../styles/index.css">    
+    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="../styles/nav&footer.css">    
     <title>Manos Amigas</title>
 </head>
 <body>
@@ -37,13 +38,14 @@
         <input type="text" id="keyword" placeholder="Buscar palabras clave...">
         <button class="search-btn" onclick="searchKeyword()">BUSCAR</button>
       </div>
-    <div class="carousel-container">
+      <img src="../Img/imagen1.png" alt="Imagen 1" id="mainphoto">
+    <!-- <div class="carousel-container">
         <div class="carousel">
           <img src="../Img/imagen1.png" alt="Imagen 1">
           <img src="../Img/imagen1.png" alt="Imagen 2">
           <img src="../Img/imagen1.png" alt="Imagen 3">
         </div>
-      </div>
+      </div> -->
 
 
     
