--- a/pages/services.html
+++ b/pages/services.html
@@ -10,9 +10,29 @@
     <link rel="stylesheet" href="../styles/variables.css">
     <link rel="stylesheet" href="../styles/global.css">
     <link rel="stylesheet" href="../styles/services.css">
+    <link rel="stylesheet" href="../styles/nav&footer.css">
     <title>Servicios</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="#" class="enlace">
+                <img src="../Img/C72A1953-5643-4AD5-B68B-E8BB0D2B4E80.png" alt="" class="logo">
+            </a>
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <img class="hamburguesa" src="../Img/barra-de-menus.png" >
+            </label>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">¿Quienes somos?</a></li>
+                <li><a href="#">Necesito un Servicio</a></li>
+                <li><a href="#">Quiero ofrecer un Servicio</a></li>
+                <li><a href="#">Contacto</a></li>
+                <li><a href="#">Preguntas Frecuentes</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="services_search_container">
         <input class="services_search" type="text" placeholder="busca un servicio.."> 
         <div>
