--- a/pages/somos.html
+++ b/pages/somos.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/variables.css">
     <link rel="stylesheet" href="../styles/global.css">
-    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="../styles/nav&footer.css">
     <link rel="stylesheet" href="../styles/somos.css">
     <title>Manos Amigas. Quienes somos</title>
 </head>
