--- a/pages/como-funcionamos.html
+++ b/pages/como-funcionamos.html
@@ -11,17 +11,31 @@
   <link rel="stylesheet" href="../styles/global.css">
   <link rel="stylesheet" href="../styles/variables.css">
   <link rel="stylesheet" href="../styles/como-funcionamos.css">
+  <link rel="stylesheet" href="../styles/nav&footer.css">
+</head>
 </head>
 <body>
 
-  <header class="operate-header">
-    <img src="C:\Users\proye\manosamigas-g3\Img\C72A1953-5643-4AD5-B68B-E8BB0D2B4E80.png" alt="logo">
+  <header>
     <nav>
-     
-      <a href="somos.html">Quienes Somos</a> 
-      <a href="contacto.html">Contacto</a>
+        <a href="./index.html" class="enlace">
+            <img src="../Img/C72A1953-5643-4AD5-B68B-E8BB0D2B4E80.png" alt="" class="logo">
+        </a>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <img class="hamburguesa" src="../Img/barra-de-menus.png" >
+        </label>
+        <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./somos.html">¿Quienes somos?</a></li>
+            <li><a href="./services.html">Necesito un Servicio</a></li>
+            <li><a href="./ofrece-tus-servicios.html">Quiero ofrecer un Servicio</a></li>
+            <li><a href="./contactanos.html">Contacto</a></li>
+            <li><a href="./como-funcionamos.html">¿Como funcionamos?</a></li>
+        </ul>
     </nav>
-  </header>
+</header>
+<div class="container-como-funcionamos">
    <article class="operate-article">
     <h1>¿Cómo Funcionamos?</h1>
     <p>Plataforma de Ayuda y Servicios Domésticos Gratuitos</p>
@@ -70,7 +84,7 @@
     </section>
 
   </main>
-
+</div>
   
 </body>
 </html>
