--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -6,8 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contactanos</title>
     <link rel="stylesheet" href="../styles/contactanos.css">
+    <link rel="stylesheet" href="../styles/global.css">
+    <link rel="stylesheet" href="../styles/variables.css">
+    <link rel="stylesheet" href="../styles/nav&footer.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="./index.html" class="enlace">
+                <img src="../Img/C72A1953-5643-4AD5-B68B-E8BB0D2B4E80.png" alt="" class="logo">
+            </a>
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <img class="hamburguesa" src="../Img/barra-de-menus.png" >
+            </label>
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./somos.html">¿Quienes somos?</a></li>
+                <li><a href="./services.html">Necesito un Servicio</a></li>
+                <li><a href="./ofrece-tus-servicios.html">Quiero ofrecer un Servicio</a></li>
+                <li><a href="./contactanos.html">Contacto</a></li>
+                <li><a href="./como-funcionamos.html">¿Como funcionamos?</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="container">
         <div class="title">Contactanos</div>
         <form id="contactForm">
