--- a/pages/ofrece-tus-servicios.html
+++ b/pages/ofrece-tus-servicios.html
@@ -8,14 +8,14 @@
     <title>Ofrece tus servicios</title>
     <link rel="stylesheet" href="../styles/ofrece-tus-servicios.css">
     <link rel="stylesheet" href="../styles/variables.css">
-    <!-- <link rel="stylesheet" href="../styles/global.css"> -->
+    <link rel="stylesheet" href="../styles/global.css">
     <link rel="stylesheet" href="../styles/nav&footer.css">
 
 </head>
 <body>`
     <header>
         <nav>
-            <a href="#" class="enlace">
+            <a href="./index.html" class="enlace">
                 <img src="../Img/C72A1953-5643-4AD5-B68B-E8BB0D2B4E80.png" alt="" class="logo">
             </a>
             <input type="checkbox" id="check">
@@ -23,15 +23,16 @@
                 <img class="hamburguesa" src="../Img/barra-de-menus.png" >
             </label>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">¿Quienes somos?</a></li>
-                <li><a href="#">Necesito un Servicio</a></li>
-                <li><a href="#">Quiero ofrecer un Servicio</a></li>
-                <li><a href="#">Contacto</a></li>
-                <li><a href="#">Preguntas Frecuentes</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./somos.html">¿Quienes somos?</a></li>
+                <li><a href="./services.html">Necesito un Servicio</a></li>
+                <li><a href="./ofrece-tus-servicios.html">Quiero ofrecer un Servicio</a></li>
+                <li><a href="./contactanos.html">Contacto</a></li>
+                <li><a href="./como-funcionamos.html">¿Como funcionamos?</a></li>
             </ul>
         </nav>
     </header>
+    <div class="formulario">
     <h1>Ofrece tus servicios</h1>
     <form id="serviceForm">
         <label for="name">Nombre:</label>
@@ -68,7 +69,7 @@
     </div>
     
       
-
+</div>
     <script src="../script/ofrece-tus-servicios.js"></script>
 </body>
 </html>
