--- a/pages/somos.html
+++ b/pages/somos.html
@@ -16,7 +16,7 @@
     <header>
         <nav>
             <a href="#" class="enlace">
-                <img src="../Img/C72A1953-5643-4AD5-B68B-E8BB0D2B4E80.png" alt="" class="logo">
+                <img src="../Img/C72A1953-5643-4AD5-B68B-E8BB0D2B4E80.png" alt="Manos Amigas" class="logo">
             </a>
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
@@ -37,7 +37,7 @@
             <div class="box">
                 <!-- <h1>Quienes somos</h1> -->
             
-                <p><h2>¡Gracias por visitar nuestra página web!</h2> <br>
+                <p><h1>¡Gracias por visitar nuestra página web!</h1> <br>
                     <br>Somos una <b>organización sin ánimo de lucro</b> dedicada a marcar la diferencia en la vida de las personas vulnerables. <br>
                     Nuestro principal objetivo es proporcionar servicios para el hogar a aquellos que más lo necesitan, creando un puente entre personas vulnerables y empresas especializadas en brindar estos servicios.<br>
 
@@ -83,5 +83,6 @@
                 <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
             </div>
     </footer>
+    <script src="../script/banner-search.js"></script>
 </body>
 </html>
