some more HTML fixes

--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contactanos</title>
+    <title>Contáctanos</title>
     <link rel="stylesheet" href="../styles/contactanos.css">
     <link rel="stylesheet" href="../styles/global.css">
     <link rel="stylesheet" href="../styles/variables.css">
@@ -22,16 +22,16 @@
             </label>
             <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./somos.html">¿Quienes somos?</a></li>
+                <li><a href="./somos.html">¿Quiénes somos?</a></li>
                 <li><a href="./services.html">Necesito un Servicio</a></li>
                 <li><a href="./ofrece-tus-servicios.html">Quiero ofrecer un Servicio</a></li>
                 <li><a href="./contactanos.html">Contacto</a></li>
-                <li><a href="./como-funcionamos.html">¿Como funcionamos?</a></li>
+                <li><a href="./como-funcionamos.html">¿Cómo funcionamos?</a></li>
             </ul>
         </nav>
     </header>
     <div class="container">
-        <div class="title">Contactanos</div>
+        <div class="title">Contáctanos</div>
         <form id="contactForm">
             <label for="fullName">Nombre y Apellido:</label>
             <input type="text" id="fullName" required>
