--- a/pages/index.html
+++ b/pages/index.html
@@ -26,11 +26,11 @@
             </label>
             <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./somos.html">¿Quienes somos?</a></li>
+                <li><a href="./somos.html">¿Quiénes somos?</a></li>
                 <li><a href="./services.html">Necesito un Servicio</a></li>
                 <li><a href="./ofrece-tus-servicios.html">Quiero ofrecer un Servicio</a></li>
                 <li><a href="./contactanos.html">Contacto</a></li>
-                <li><a href="./como-funcionamos.html">¿Como funcionamos?</a></li>
+                <li><a href="./como-funcionamos.html">¿Cómo funcionamos?</a></li>
             </ul>
         </nav>
     </header>
@@ -43,7 +43,7 @@
 
     <div class="btnMobileServices">
         <div>
-            <h3>SERVICIOS MAS DEMANDADOS</h3>
+            <h3>SERVICIOS MÁS DEMANDADOS</h3>
         </div>
         
         
