--- a/pages/ofrece-tus-servicios.html
+++ b/pages/ofrece-tus-servicios.html
@@ -28,7 +28,7 @@
                 <li><a href="./services.html">Necesito un Servicio</a></li>
                 <li><a href="./ofrece-tus-servicios.html">Quiero ofrecer un Servicio</a></li>
                 <li><a href="./contactanos.html">Contacto</a></li>
-                <li><a href="./como-funcionamos.html">¿Como funcionamos?</a></li>
+                <li><a href="./como-funcionamos.html">¿Cómo funcionamos?</a></li>
             </ul>
         </nav>
     </header>
@@ -55,7 +55,7 @@
             <option value="acompanamiento">Acompañamiento</option>
             <option value="manitas">Manitas</option>
             <option value="cuidados">Cuidados</option>
-            <option value="legal">Legal y Papeleo</option>
+            <option value="legal">Trámites</option>
             
         </select>
 
