--- a/pages/somos.html
+++ b/pages/somos.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../styles/global.css">
     <link rel="stylesheet" href="../styles/nav&footer.css">
     <link rel="stylesheet" href="../styles/somos.css">
-    <title>Manos Amigas. Quienes somos</title>
+    <title>Manos Amigas. Quiénes somos</title>
 </head>
 <body>
     <header>
@@ -24,11 +24,11 @@
             </label>
             <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./somos.html">¿Quienes somos?</a></li>
+                <li><a href="./somos.html">¿Quiénes somos?</a></li>
                 <li><a href="./services.html">Necesito un Servicio</a></li>
                 <li><a href="./ofrece-tus-servicios.html">Quiero ofrecer un Servicio</a></li>
                 <li><a href="./contactanos.html">Contacto</a></li>
-                <li><a href="./como-funcionamos.html">¿Como funcionamos?</a></li>
+                <li><a href="./como-funcionamos.html">¿Cómo funcionamos?</a></li>
             </ul>
         </nav>
     </header>
