--- a/pages/como-funcionamos.html
+++ b/pages/como-funcionamos.html
@@ -16,12 +16,8 @@
 </head>
 <body>
 
-<<<<<<< HEAD
   <header class="operate-header">
-    <img src="..\Img\C72A1953-5643-4AD5-B68B-E8BB0D2B4E80.png" alt="logo">
-=======
-  <header>
->>>>>>> 8a1a6a819866bd159fe8e01fd6afc6abf77fd586
+  <!-- <header> -->
     <nav>
         <a href="./index.html" class="enlace">
             <img src="../Img/C72A1953-5643-4AD5-B68B-E8BB0D2B4E80.png" alt="" class="logo">
@@ -32,11 +28,11 @@
         </label>
         <ul>
             <li><a href="./index.html">Home</a></li>
-            <li><a href="./somos.html">¿Quienes somos?</a></li>
+            <li><a href="./somos.html">¿Quiénes somos?</a></li>
             <li><a href="./services.html">Necesito un Servicio</a></li>
             <li><a href="./ofrece-tus-servicios.html">Quiero ofrecer un Servicio</a></li>
             <li><a href="./contactanos.html">Contacto</a></li>
-            <li><a href="./como-funcionamos.html">¿Como funcionamos?</a></li>
+            <li><a href="./como-funcionamos.html">¿Cómo funcionamos?</a></li>
         </ul>
     </nav>
 </header>
@@ -85,7 +81,7 @@
 
     <section class="operate-section">
       <h2>Paso 8:¿Deseas Ayudar?: </h2>
-      <p>Si ers un profesional con habilidades para ofrecer y te gustaría unirte a nuestra causa, regístrate como proveedor de servicios. Tu compromiso y dedicación pueden marcar una gran diferencia en la vida de quienes necesitan ayuda.  </p>
+      <p>Si eres un profesional con habilidades para ofrecer y te gustaría unirte a nuestra causa, regístrate como proveedor de servicios. Tu compromiso y dedicación pueden marcar una gran diferencia en la vida de quienes necesitan ayuda.  </p>
     </section>
 
   </main>
